--- a/FrontEnd-viajatcc/src/app/components/auth/login/login.component.html
+++ b/FrontEnd-viajatcc/src/app/components/auth/login/login.component.html
@@ -2,19 +2,23 @@
     <div class="w-1/2 flex items-center justify-center">
         <div class="w-96">
             <h2 class="text-2xl font-bold mb-4">Faça seu login</h2>
-            <form action="" method="POST">
-           
+            <form [formGroup]="logForm" (ngSubmit)="onLogin()">  <!-- Formulário com formGroup -->
                 <div class="mb-4">
-                    <label class="block text-sm font-medium">E-mail</label>
-                    <input type="email" name="email" class="w-full px-4 py-2 border rounded-md">
+                    <label for="username" class="block text-sm font-medium">Usuário:</label>
+                    <input id="username" formControlName="username" placeholder="Digite seu usuário"
+                        class="w-full px-4 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" />
                 </div>
                 <div class="mb-4">
-                    <label class="block text-sm font-medium">Senha</label>
-                    <input type="password" name="password" class="w-full px-4 py-2 border rounded-md">
+                    <label for="password" class="block text-sm font-medium">Senha:</label>
+                    <input id="password" type="password" formControlName="password" placeholder="Digite sua senha"
+                        class="w-full px-4 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" />
                 </div>
-                <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-md">Login</button>
+                <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-md" [disabled]="logForm.invalid">  <!-- Botão desabilitado se o formulário for inválido -->
+                    Entrar
+                </button>
             </form>
             <p class="mt-4 text-sm">Não tem conta? <a href="registrar.html" class="text-blue-600">Crie uma agora</a></p>
+            <div *ngIf="errorMessage" class="text-red-500 text-sm mt-2">{{ errorMessage }}</div>  <!-- Mensagem de erro -->
         </div>
     </div>
     <div class="w-1/2 bg-blue-600 flex items-center justify-center text-white">
