Criando outro projeto de frontend focado em no standalone

--- a/viajatcc-frontend/src/app/components/auth/login/login.component.html
+++ b/viajatcc-frontend/src/app/components/auth/login/login.component.html
@@ -18,7 +18,7 @@
                 </button>
             </form>
             <p class="mt-4 text-sm">Não tem conta? <a href="registrar.html" class="text-blue-600">Crie uma agora</a></p>
-            <div *ngIf="errorMessage" class="text-red-500 text-sm mt-2">{{ errorMessage }}</div>  <!-- Mensagem de erro -->
+            <!-- <div *ngIf="errorMessage" class="text-red-500 text-sm mt-2">{{ errorMessage }}</div>  Mensagem de erro -->
         </div>
     </div>
     <div class="w-1/2 bg-blue-600 flex items-center justify-center text-white">
