--- a/viajatcc-frontend/src/app/components/auth/signup/signup.component.html
+++ b/viajatcc-frontend/src/app/components/auth/signup/signup.component.html
@@ -2,23 +2,31 @@
     <div class="w-1/2 flex items-center justify-center">
         <div class="w-96">
             <h2 class="text-2xl font-bold mb-4">Crie sua conta</h2>
-            <form action="" method="POST">
+            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
 
                 <div class="mb-4">
                     <label class="block text-sm font-medium">Nome</label>
-                    <input type="text" name="name" class="w-full px-4 py-2 border rounded-md">
+                    <input type="text" formControlName="name" class="w-full px-4 py-2 border rounded-md">
+                </div>
+                <div class="mb-4">
+                    <label class="block text-sm font-medium">CPF</label>
+                    <input type="text" formControlName="cpf" class="w-full px-4 py-2 border rounded-md">
+                </div>
+                <div class="mb-4">
+                    <label class="block text-sm font-medium">Idade</label>
+                    <input type="number" formControlName="idade" class="w-full px-4 py-2 border rounded-md">
                 </div>
                 <div class="mb-4">
                     <label class="block text-sm font-medium">E-mail</label>
-                    <input type="email" name="email" class="w-full px-4 py-2 border rounded-md">
+                    <input type="email" formControlName="email" class="w-full px-4 py-2 border rounded-md">
                 </div>
                 <div class="mb-4">
                     <label class="block text-sm font-medium">Senha</label>
-                    <input type="password" name="password" class="w-full px-4 py-2 border rounded-md">
+                    <input type="password" formControlName="password" class="w-full px-4 py-2 border rounded-md">
                 </div>
                 <div class="mb-4">
                     <label class="block text-sm font-medium">Confirme sua senha</label>
-                    <input type="password" name="password_confirmation" class="w-full px-4 py-2 border rounded-md">
+                    <input type="password" formControlName="password_confirmation" class="w-full px-4 py-2 border rounded-md">
                 </div>
                 <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-md">Registrar</button>
             </form>
