--- a/viajatcc-frontend/src/app/components/auth/login/login.component.html
+++ b/viajatcc-frontend/src/app/components/auth/login/login.component.html
@@ -4,7 +4,7 @@
             <h2 class="text-2xl font-bold mb-4">Faça seu login</h2>
             <form [formGroup]="logForm" (ngSubmit)="onLogin()">  <!-- Formulário com formGroup -->
                 <div class="mb-4">
-                    <label for="username" class="block text-sm font-medium">Usuário:</label>
+                    <label for="username" class="block text-sm font-medium">Email:</label>
                     <input id="username" formControlName="username" placeholder="Digite seu usuário"
                         class="w-full px-4 py-2 border rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" />
                 </div>
