--- a/viajatcc-frontend/src/app/components/home/home.component.html
+++ b/viajatcc-frontend/src/app/components/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<div class="layout">
+    <div class="sidebar" *ngIf="menu">
+        <button (click)="onClick(false)">
+            <mat-icon class="menu-button">menu</mat-icon>
+          </button>      
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="home">
+        <button *ngIf="!menu"  (click)="onClick(true)">
+            <mat-icon class="menu-button">menu</mat-icon>
+          </button>    
+        home
+    </div>
+</div>
