--- a/viajatcc-frontend/src/app/components/home/home.component.html
+++ b/viajatcc-frontend/src/app/components/home/home.component.html
@@ -5,16 +5,12 @@
         </button>      
         <app-sidebar></app-sidebar>
     </div>
-    <div class="home" *ngIf="home">  
+    <div class="home" >  
       <button (click)="onClick(true)" *ngIf="!menu">
         <mat-icon class="menu-button">menu</mat-icon>
       </button> 
-      <app-dashboard></app-dashboard>
     </div>
-    <div class="trip" *ngIf="trips">
-      <button (click)="onClick(true)" *ngIf="!menu">
-        <mat-icon class="menu-button">menu</mat-icon>
-      </button> 
+    <div class="trip" >
       <router-outlet></router-outlet>
     </div>
 </div>
