--- a/viajatcc-frontend/src/app/components/trips/list/trips.component.html
+++ b/viajatcc-frontend/src/app/components/trips/list/trips.component.html
@@ -4,22 +4,25 @@
   <div *ngIf="isLoading" class="loading">Carregando...</div>
   <div *ngIf="error" class="error">{{ error }}</div>
 
-  <div class="trips-grid">
-    <div class="trip-card" *ngFor="let trip of trips">
-      <h2>{{ trip.nome }}</h2>
-      <p><strong>Data:</strong> {{ trip.data | date : "dd/MM/yyyy" }}</p>
-      <p><strong>Preço:</strong> R$ {{ trip.preco | number : "1.2-2" }}</p>
-      <p><strong>Passageiros:</strong> {{ trip.passageiros.length }}</p>
+  <div class="trips-table-wrapper" *ngIf="trips.length > 0">
+    <div class="trips-table header">
+      <span>Viagem</span>
+      <span>Data</span>
+      <span>Preço</span>
+      <span>Passageiros</span>
+      <span>Ações</span>
+    </div>
 
-      <div class="actions">
-        <button *ngIf="trip._id" (click)="viewDetails(trip._id)">
-          Ver Detalhes
-        </button>
-        <button *ngIf="trip._id" (click)="editTrip(trip._id)">Editar</button>
-        <button *ngIf="trip._id" (click)="deleteTrip(trip._id)" class="delete">
-          Excluir
-        </button>
-      </div>
+    <div class="trips-table row" *ngFor="let trip of trips">
+      <span>{{ trip.nome }}</span>
+      <span>{{ trip.data | date : "dd/MM/yyyy" }}</span>
+      <span>R$ {{ trip.preco | number : "1.2-2" }}</span>
+      <span>{{ trip.passageiros.length }}</span>
+      <span class="actions">
+        <button *ngIf="trip._id"  (click)="viewDetails(trip._id)">Ver</button>
+        <button *ngIf="trip._id"  (click)="editTrip(trip._id)">Editar</button>
+        <button *ngIf="trip._id"  (click)="deleteTrip(trip._id)" class="delete">Excluir</button>
+      </span>
     </div>
   </div>
 </div>
