--- a/viajatcc-frontend/src/app/components/trips/list/trips.component.html
+++ b/viajatcc-frontend/src/app/components/trips/list/trips.component.html
@@ -1,5 +1,6 @@
 <div class="trips-container">
   <h1>Viagens Disponíveis</h1>
+  <a href="/home/trips/create" class="button">Criar viagem</a>
 
   <div *ngIf="isLoading" class="loading">Carregando...</div>
   <div *ngIf="error" class="error">{{ error }}</div>
