--- a/viajatcc-frontend/src/app/components/trips/list/trips.component.scss
+++ b/viajatcc-frontend/src/app/components/trips/list/trips.component.scss
@@ -2,11 +2,18 @@
   padding: 2rem;
   max-width: 100%;
   margin: 0 auto;
+  justify-content: center;
+  align-items: center;
 
   h1 {
     margin-bottom: 1.5rem;
     font-size: 2rem;
     text-align: center;
+  }
+  a {
+    text-align: center;
+    margin: 0 auto;
+    justify-content: center;
   }
 
   .loading,
@@ -72,5 +79,15 @@
         }
       }
     }
+  }
+
+  .button {
+    padding: 0.3rem 0.7rem;
+    font-size: 0.85rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #4a289e;
+    color: white;
   }
 }
