Colocando icones na sidenav no dashboard e na Viagens

--- a/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
+++ b/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 <nav class="sidebar-nav">
     <ul>
-      <li><a href="/home/dashboard"><h2>Dashboard</h2></a></li>
-      <li><a href="/home/trips/list"><h2>Viagens</h2></a></li>
+      <li><a href="/home/dashboard"> <mat-icon>home</mat-icon> <h2>Dashboard</h2></a></li>
+      <li><a href="/home/trips/list"> <mat-icon>flight</mat-icon> <h2>Viagens</h2></a></li>
       <li class="account"><a href="/users/"><mat-icon>person</mat-icon> <h2> minha conta</h2></a></li>
     </ul>
   </nav>
