--- a/viajatcc-frontend/src/app/app.component.html
+++ b/viajatcc-frontend/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<ng-container *ngIf="authChecked; else loading">
+    <router-outlet></router-outlet>
+</ng-container>
+
+<ng-template #loading>
+    <div class="loading-screen" *ngIf="isBrowser">
+        <mat-spinner></mat-spinner>
+    </div>
+</ng-template>
