--- a/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
+++ b/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
@@ -2,6 +2,9 @@
     <ul>
       <li><a href="/home/dashboard"> <mat-icon>home</mat-icon> <h2>Dashboard</h2></a></li>
       <li><a href="/home/trips/list"> <mat-icon>flight</mat-icon> <h2>Viagens</h2></a></li>
+      <li><a href="/home/bus"> <span class="material-symbols-outlined">
+        directions_bus
+        </span> <h2>Ônibus</h2></a></li>
       <li class="account"><a href="/users/"><mat-icon>person</mat-icon> <h2> minha conta</h2></a></li>
     </ul>
   </nav>
