--- a/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
+++ b/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
       <li><a href="/home/bus"> <span class="material-symbols-outlined">
         directions_bus
         </span> <h2>Ônibus</h2></a></li>
-      <li class="account"><a href="/users/"><mat-icon>person</mat-icon> <h2> minha conta</h2></a></li>
+      <li class="account"><a href="/home/users/"><mat-icon>person</mat-icon> <h2> minha conta</h2></a></li>
     </ul>
   </nav>
   
