--- a/viajatcc-frontend/src/app/components/home/home.component.html
+++ b/viajatcc-frontend/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="layout">
   <div class="sidebar" *ngIf="menu">
       <button (click)="onClick(false)">
-          <mat-icon class="menu-button">menu</mat-icon>
+          <mat-icon class="menu-button-sidebar">close</mat-icon>
         </button>      
-        <app-sidebar></app-sidebar>
+        <app-sidebar [user]="user"></app-sidebar>
     </div>
     <div class="home" >
       <button (click)="onClick(true)" *ngIf="!menu">
