Adicionando form para criar supplier e botão para excluir

--- a/viajatcc-frontend/src/app/components/bus/fornecedores/fornecedores.component.html
+++ b/viajatcc-frontend/src/app/components/bus/fornecedores/fornecedores.component.html
@@ -19,7 +19,7 @@
                 <span>{{ supplier.telefone }}</span>
                 <span class="actions">
                     <button *ngIf="supplier._id">Editar</button>
-                    <button *ngIf="supplier._id" class="delete">Excluir</button>
+                    <button *ngIf="supplier._id" class="delete" (click)="deleteSupplier(supplier._id)">Excluir</button>
                 </span>
             </div>
         </div>
