--- a/viajatcc-frontend/src/app/components/home/home.component.scss
+++ b/viajatcc-frontend/src/app/components/home/home.component.scss
@@ -9,6 +9,10 @@
     height: 100vh; /* ocupa toda a altura da viewport */
     width: 20%;
     background-color: #9ea0e5;
+    display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.534);
   }
   .menu-button {
     margin: 5px;
@@ -25,8 +29,7 @@
     background-color: #4a289e;
   }
   .menu-button-sidebar {
-    margin: 5px;
-    margin-left: 5em;
+    margin-left: 80%;
     font-size: 40px;
     width: 40px;
     height: 40px;
