--- a/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.scss
+++ b/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.scss
@@ -25,7 +25,8 @@ ul {
   display: flex;
   flex-direction: column;
   gap: 10px;
-  height: 100%;
+  height: 90vh;
+  overflow: hidden;
 }
 
 li {
@@ -53,7 +54,7 @@ li h2 {
   font-weight: 600;
 }
 .account {
-  justify-content: flex-end;
-  align-items: flex-end;
-  margin-top: 20em;
+  justify-self: flex-end;
+  
+  margin-top: auto;
 }
