--- a/viajatcc-frontend/src/app/components/user/user.component.scss
+++ b/viajatcc-frontend/src/app/components/user/user.component.scss
@@ -1,6 +1,8 @@
 .user-info-container {
     max-width: 500px;
     margin: 50px auto;
+    display: flex;
+    flex-direction: column;
     padding: 30px;
     background-color: #f9f9f9;
     border-radius: 16px;
@@ -25,5 +27,20 @@
         }
       }
     }
+  }
+  .button {
+    padding: 0.3rem 0.7rem;
+    font-size: 0.85rem;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    background-color: #4a289e;
+    color: white;
+    align-content: center;
+    margin: 0 10vw;
+    transition: .3s ease;
+  }
+  .button:hover {
+    background-color: #976dff;
   }
   
