--- a/viajatcc-frontend/src/app/components/bus/form-fornecedor/form-fornecedor.component.scss
+++ b/viajatcc-frontend/src/app/components/bus/form-fornecedor/form-fornecedor.component.scss
@@ -1,5 +1,6 @@
 .form-container {
-    max-width: 500px;
+    width: 90%;
+    height: fit-content;
     margin: 40px auto;
     padding: 30px;
     background-color: #f7f9fc;
