Adicionando function para buscar todos os onibus no form da viagem

--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
@@ -23,8 +23,13 @@
     </div>
 
     <div class="form-group">
-      <label for="onibus">ID do Ônibus</label>
-      <input id="onibus" formControlName="onibus" type="text" />
+      <label for="onibus">Seleciona a capacidade do ônibus</label>
+      <select name="onibus" id="">
+        <option value="">72</option>
+        <option value="">72</option>
+        <option value="">72</option>
+        <option value="">72</option>
+      </select>
     </div>
 
     <button type="submit" [disabled]="form.invalid">
