--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
@@ -20,7 +20,7 @@
     }
 
     input,
-    textarea {
+    textarea, option, select {
       width: 100%;
       padding: 0.6rem;
       border: 1px solid #ccc;
