--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
@@ -3,7 +3,7 @@
 
   <form [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="form-group">
-      <label for="nome">Nome</label>
+      <label for="nome">Destino</label>
       <input id="nome" formControlName="nome" type="text" />
     </div>
 
@@ -24,9 +24,10 @@
 
     <div class="form-group">
       <label for="onibus">Seleciona a capacidade do ônibus</label>
-      <select name="onibus" id="">
-        <option value="bus._id" *ngFor="let bus of buses">{{bus.capacidade}} - R$ {{bus.valor}}</option>
+      <select formControlName="onibus" id="">
+        <option value="{{bus._id}}" *ngFor="let bus of buses">{{bus.capacidade}} - R$ {{bus.valor}}</option>
       </select>
+      <p>Onibus ainda não cadastrado? <a href="/home/bus/list">Clique aqui!</a></p>
     </div>
 
     <button type="submit" [disabled]="form.invalid">
