--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
@@ -5,6 +5,11 @@
   background-color: #f9f9f9;
   border-radius: 8px;
 
+  a {
+    color: blue;
+    text-decoration: underline;
+  }
+
   h1 {
     text-align: center;
     margin-bottom: 1.5rem;
