Adicionando populate no supplier para resgatar onibus

--- a/viajatcc-frontend/src/app/components/bus/supplier-detail/supplier-detail.component.html
+++ b/viajatcc-frontend/src/app/components/bus/supplier-detail/supplier-detail.component.html
@@ -1,1 +1,5 @@
-<p>supplier-detail works!</p>
+<div class="supplier-card">
+    <h2>{{ supplier.nome }}</h2>
+    <p><strong>Telefone:</strong> {{ supplier.telefone }}</p>
+    <p><strong>Endereço:</strong> {{ supplier.endereco }}</p>
+  </div>
