--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
@@ -25,7 +25,7 @@
     <div class="form-group">
       <label for="onibus">Seleciona a capacidade do ônibus</label>
       <select formControlName="onibus" id="">
-        <option value="{{bus._id}}" *ngFor="let bus of buses">{{bus.capacidade}} - R$ {{bus.valor}}</option>
+        <option value="{{bus._id}}" *ngFor="let bus of buses">{{bus.capacidade}} - R$ {{bus.valor}} - {{bus.fornecedor_id.nome}}</option>
       </select>
       <p>Onibus ainda não cadastrado? <a href="/home/bus/list">Clique aqui!</a></p>
     </div>
