Usando form de fornecedor para editar fornecedor

--- a/viajatcc-frontend/src/app/components/bus/form-fornecedor/form-fornecedor.component.html
+++ b/viajatcc-frontend/src/app/components/bus/form-fornecedor/form-fornecedor.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="supplierForm" (ngSubmit)="onsubmit()" class="form-container">
-  <div class="form-group">
+  <div class="form-group" *ngIf="!editMode">
     <label for="cnpj">CNPJ</label>
     <input type="text" id="cnpj" formControlName="cnpj"  (keyup)="findcnpj()">
   </div>
