--- a/viajatcc-frontend/src/app/components/bus/fornecedores/fornecedores.component.html
+++ b/viajatcc-frontend/src/app/components/bus/fornecedores/fornecedores.component.html
@@ -18,7 +18,7 @@
                 <span>{{ supplier.endereco }}</span>
                 <span>{{ supplier.telefone }}</span>
                 <span class="actions">
-                    <button *ngIf="supplier._id">Editar</button>
+                    <button *ngIf="supplier._id" (click)="updateSupplier(supplier)">Editar</button>
                     <button *ngIf="supplier._id" class="delete" (click)="deleteSupplier(supplier._id)">Excluir</button>
                 </span>
             </div>
