--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.html
@@ -25,12 +25,14 @@
     <div class="form-group">
       <label for="pontoDePartida">Ponto de partida</label>
       <input id="pontoDePartida" formControlName="pontoDePartida" type="text" />
+      <button (click)="openMaps()"><mat-icon>location_on</mat-icon></button>
     </div>
 
     <div class="form-group">
       <label for="onibus">Seleciona a capacidade do ônibus</label>
       <select formControlName="onibus" id="">
-        <option value="{{bus._id}}" *ngFor="let bus of buses">{{bus.capacidade}} - R$ {{bus.valor}} - {{bus.fornecedor_id.nome}}</option>
+        <option value="{{bus._id}}" *ngFor="let bus of buses">{{bus.capacidade}} - R$ {{bus.valor}} -
+          {{bus.fornecedor_id.nome}}</option>
       </select>
       <p>Onibus ainda não cadastrado? <a href="/home/bus/list">Clique aqui!</a></p>
     </div>
