--- a/viajatcc-frontend/src/app/components/trips/form/dialog-maps/dialog-maps.component.html
+++ b/viajatcc-frontend/src/app/components/trips/form/dialog-maps/dialog-maps.component.html
@@ -1,1 +1,2 @@
-<div #mapElement id="map" style="height: 500px; width: 100%;"></div>
+<div #mapElement id="map" style="height: 500px; width: 100%;">
+</div>
