--- a/viajatcc-frontend/src/app/components/trips/form/dialog-maps/dialog-maps.component.scss
+++ b/viajatcc-frontend/src/app/components/trips/form/dialog-maps/dialog-maps.component.scss
@@ -7,19 +7,12 @@
  * Always set the map height explicitly to define the size of the div element
  * that contains the map. 
  */
- #map {
+ ::ng-deep  #map {
     height: 100%;
   }
   
-  /* Optional: Makes the sample page fill the window. */
-  html,
-  body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
   
-  input[type="text"] {
+  ::ng-deep  input[type="text"] {
     background-color: #fff;
     border: 0;
     border-radius: 2px;
@@ -30,10 +23,10 @@
     overflow: hidden;
     line-height: 40px;
     margin-right: 0;
-    min-width: 25%;
+    width: 50%;
   }
   
-  input[type="button"] {
+  ::ng-deep   input[type="button"] {
     background-color: #fff;
     border: 0;
     border-radius: 2px;
@@ -46,21 +39,21 @@
     cursor: pointer;
     margin-left: 5px;
   }
-  input[type="button"]:hover {
+  ::ng-deep   input[type="button"]:hover {
     background: rgb(235, 235, 235);
   }
-  input[type="button"].button-primary {
+  ::ng-deep input[type="button"].button-primary {
     background-color: #1a73e8;
     color: white;
   }
-  input[type="button"].button-primary:hover {
+  ::ng-deep input[type="button"].button-primary:hover {
     background-color: #1765cc;
   }
-  input[type="button"].button-secondary {
+  ::ng-deep input[type="button"].button-secondary {
     background-color: white;
     color: #1a73e8;
   }
-  input[type="button"].button-secondary:hover {
+  ::ng-deep input[type="button"].button-secondary:hover {
     background-color: #d2e3fc;
   }
   
