--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
@@ -37,7 +37,7 @@
     }
   }
 
-  button {
+  .button {
     width: 100%;
     padding: 0.8rem;
     background-color: #007bff;
@@ -53,3 +53,14 @@
     }
   }
 }
+.big-icon {
+  background-color: #007bff;
+  color: white;
+  margin: 0 10px;
+  padding: 5px;
+  font-size: 40px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%
+}
+
