--- a/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
+++ b/viajatcc-frontend/src/app/components/trips/form/form-trip/form-trip.component.scss
@@ -55,12 +55,17 @@
 }
 .big-icon {
   background-color: #007bff;
-  color: white;
+  color: black;
   margin: 0 10px;
   padding: 5px;
   font-size: 40px;
   width: 50px;
   height: 50px;
-  border-radius: 50%
+  border-radius: 50%;
+  transition: .2s ease, color .2s ease;
+}
+.big-icon:hover {
+  background-color: #0053ac;
+  color: white;
 }
 
