Alterando as cores para deixar mais fiel ao projeto

--- a/viajatcc-frontend/src/app/components/home/dashboard/dashboard.component.html
+++ b/viajatcc-frontend/src/app/components/home/dashboard/dashboard.component.html
@@ -21,7 +21,7 @@
   </div>
   <div class="bars">
     <div class="bar">
-      <canvas baseChart [data]="barChartData" [options]="barChartOptions" [type]="'bar'">
+      <canvas baseChart [data]="barChartDataIdade" [options]="barChartOptions" [type]="'bar'">
       </canvas>
     </div>
     <div class="bar">
