--- a/viajatcc-frontend/src/styles.scss
+++ b/viajatcc-frontend/src/styles.scss
@@ -3,8 +3,8 @@
 // Customize the entire app. Change :root to your selector if you want to scope the styles.
 :root {
   @include mat.progress-bar-overrides((
-    active-indicator-color: rgb(95, 11, 67),
-    track-color: rgb(140, 140, 140),
+    active-indicator-color: #a3cdff,
+    track-color: rgb(0, 0, 0),
     active-indicator-height: 12px,
     track-height: 12px,
   ));
