--- a/viajatcc-frontend/src/app/components/home/home.component.scss
+++ b/viajatcc-frontend/src/app/components/home/home.component.scss
@@ -7,8 +7,8 @@
 }
 
 .sidebar {
-  width: 20%;
-  background-color: #9ea0e5;
+  width: 16%;
+  background: linear-gradient(180deg, #1c2b64, #1f62b3); 
   display: flex;
   overflow: hidden;
   flex-direction: column;
