--- a/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
+++ b/viajatcc-frontend/src/app/components/home/sidebar/sidebar.component.html
@@ -1,11 +1,12 @@
 <nav class="sidebar-nav">
+  <div class="nav-links">
     <ul>
-      <li><a href="/home/dashboard"> <mat-icon>home</mat-icon>&nbsp;&nbsp;&nbsp; <h2>Dashboard</h2></a></li>
-      <li><a href="/home/trips/list"> <mat-icon>flight</mat-icon>&nbsp;&nbsp;&nbsp; <h2>Viagens</h2></a></li>
-      <li><a href="/home/bus/list"> <span class="material-symbols-outlined">
-        directions_bus
-        </span>&nbsp;&nbsp;&nbsp; <h2>Ônibus</h2></a></li>
-      <li class="account"><a href="/home/users/"><mat-icon>person</mat-icon>&nbsp;&nbsp;&nbsp; <h2> minha conta</h2></a></li>
+      <li><a href="/home/dashboard"><mat-icon>home</mat-icon><h2>Dashboard</h2></a></li>
+      <li><a href="/home/trips/list"><mat-icon>flight</mat-icon><h2>Viagens</h2></a></li>
+      <li><a href="/home/bus/list"><span class="material-symbols-outlined">directions_bus</span><h2>Ônibus</h2></a></li>
     </ul>
-  </nav>
-  
+  </div>
+  <div class="account">
+    <a href="/home/users/"><mat-icon>person</mat-icon><h2>Minha Conta</h2></a>
+  </div>
+</nav>
